Mensajes de error

--- a/app/noticias/noticia.html
+++ b/app/noticias/noticia.html
@@ -1,26 +1,20 @@
-<div class="container container-color container-menu-margin">
+<div ng-controller="NoticiaController as noticiaCtrl" class="container container-color container-menu-margin">
     <div class="container-info">
         <div class="show-noticia-container">
             <div class="show-noticia-foto">
                 <img src="" title="Foto 1" alt="Foto 1">
             </div>
             <div class="show-noticia-info">
-                <h3 class="color-default">Titulo 1:</h3>
-                <p>
-                    Siendo un empresa de sistemas forjandose en los &uacute;ltimos a&ntilde;os, nuestra visi&oacute;n del
-                    mercado es muy diferente de las empresas tradicionales Argentinas. Nuestro objetivo
-                    es el servicio y servicio solo lo entendemos por entregar el producto, lo entedemos por
-                    entregar el producto y establecer una relaci&oacute;n con el cliente de soporte y crecimiento.
-                </p>
+                <h3 class="color-default">{{noticiaCtrl.titulo}}</h3>
+                <p>{{noticiaCtrl.noticia.detalles}}</p>
+                <a href="" ng-click="noticiaCtrl.showNoticia(noticiaCtrl.noticia);">Ver</a>
             </div>
         </div>
 
-
         <div class="back">
             <div class="arrow-left"></div>
-            <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/main'});">Volver</a>
+            <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/noticias'});">Volver</a>
         </div>
-
 
     </div>
 </div>
