--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <!--meta charset="utf-8"-->
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>AC-Desarrollos</title>
   <meta name="description" content="">
@@ -121,6 +121,7 @@
                 'bower_components/angular-animate/angular-animate.min.js',
                 'bower_components/ac-angular-utils/ac-utils.min.js',
                 'bower_components/ac-angular-contacts/ac-contacts.min.js',
+                'bower_components/ac-generador-noticias/app/ac-noticias.js',
                 'https://cdn.firebase.com/js/client/2.2.1/firebase.js'
             ], 'segundo');
 
@@ -225,7 +226,7 @@
 
   <div class="footer">
     <p>
-      Â© 2016 - <a href="http://ac-desarrollos.com/" class="footer-link">www.ac-desarrollos.com </a>
+      © 2016 - <a href="http://ac-desarrollos.com/" class="footer-link">www.ac-desarrollos.com </a>
       AC-Desarrollos - 011-3111-5006 - <a href="http://ac-desarrollos.com/" class="footer-link">ventas@ac-desarrollos.com</a>  -
       All Rights Reserved</p>
   </div>
