--- a/app/index.html
+++ b/app/index.html
@@ -121,7 +121,7 @@
                 'bower_components/angular-animate/angular-animate.min.js',
                 'bower_components/ac-angular-utils/ac-utils.min.js',
                 'bower_components/ac-angular-contacts/ac-contacts.min.js',
-                'bower_components/ac-generador-noticias/app/ac-noticias.js',
+                'bower_components/ac-angular-noticias/ac-noticias.js',
                 'https://cdn.firebase.com/js/client/2.2.1/firebase.js'
             ], 'segundo');
 
@@ -226,7 +226,7 @@
 
   <div class="footer">
     <p>
-      © 2016 - <a href="http://ac-desarrollos.com/" class="footer-link">www.ac-desarrollos.com </a>
+      ï¿½ 2016 - <a href="http://ac-desarrollos.com/" class="footer-link">www.ac-desarrollos.com </a>
       AC-Desarrollos - 011-3111-5006 - <a href="http://ac-desarrollos.com/" class="footer-link">ventas@ac-desarrollos.com</a>  -
       All Rights Reserved</p>
   </div>
