--- a/app/index.html
+++ b/app/index.html
@@ -119,6 +119,7 @@
                 'bower_components/oclazyload/dist/ocLazyLoad.min.js',
                 //'bower_components/angular-cookies/angular-cookies.min.js',
                 'bower_components/angular-animate/angular-animate.min.js',
+                'bower_components/angular-toastr/dist/angular-toastr.min.js',
                 'bower_components/ac-angular-utils/ac-utils.min.js',
                 'bower_components/ac-angular-contacts/ac-contacts.min.js',
                 'bower_components/ac-angular-noticias/ac-noticias.js',
