contenedores para los colores

--- a/app/chat/chat.html
+++ b/app/chat/chat.html
@@ -1,4 +1,4 @@
-<div ng-controller="ChatController as chatCtrl" class="container container-color container-menu-margin">
+<div ng-controller="ChatController as chatCtrl" class="container container-color-6 container-menu-margin">
     <div class="container-info" form-id="contacto">
         <h1 class="color-primary">Chat</h1>
         <div class="chat-container" id="contacto-form" ng-if="!chatCtrl.chatIsLogged">
