--- a/app/contactanos/contacto.html
+++ b/app/contactanos/contacto.html
@@ -1,4 +1,4 @@
-<div ng-controller="ContactoController as contactoCtrl" class="container container-color container-menu-margin">
+<div ng-controller="ContactoController as contactoCtrl" class="container container-color-3 container-menu-margin">
     <div class="container-info" form-id="contacto">
         <h1 class="color-primary">Cont&aacute;ctanos:</h1>
         <div class="contacto-container" id="contacto-form" style="margin-top:30px;">
