--- a/app/hacemos/hacemos.html
+++ b/app/hacemos/hacemos.html
@@ -1,4 +1,4 @@
-<div ng-controller="HacemosController as hacemosCtrl" class="container container-color container-menu-margin">
+<div ng-controller="HacemosController as hacemosCtrl" class="container container-color-2 container-menu-margin">
     <div class="container-info">
         <h1>Que hacemos?</h1>
 
