--- a/app/mision/mision.html
+++ b/app/mision/mision.html
@@ -1,4 +1,4 @@
-<div class="container container-color container-menu-margin">
+<div class="container container-color-1 container-menu-margin">
   <div class="container-info">
     <h1>Nuestra Misi&oacute;n</h1>
     <p>
