--- a/app/sabias/sabias.html
+++ b/app/sabias/sabias.html
@@ -1,4 +1,4 @@
-<div ng-controller="SabiasController as sabiasCtrl" class="container container-color container-menu-margin">
+<div ng-controller="SabiasController as sabiasCtrl" class="container container-color-4 container-menu-margin">
     <div class="container-info">
         <div class="sabias-slider">
             <h1>Sab&iacute;as qué?</h1>
