--- a/app/noticias/noticias.html
+++ b/app/noticias/noticias.html
@@ -13,7 +13,8 @@
                     <div class="noticia-info">
                         <h5>{{noticia.titulo}}</h5>
                         <p>{{noticia.detalles.length > 180 ? noticia.detalles.substring(0, 180) + "....." : noticia.detalles}}</p>
-                        <a href="" ng-click="noticiasCtrl.goToNoticia(noticia.noticia_id);">Ver</a>
+                        <!--a href="" ng-click="noticiasCtrl.goToNoticia(noticia.noticia_id);">Ver</a-->
+                        <button ng-click="noticiasCtrl.goToNoticia(noticia.noticia_id);" class="btn btn-default">Ver Noticia</button>
                     </div>
                 </div>
             </div>
@@ -27,7 +28,8 @@
                     <div class="noticia-info">
                         <h5>{{noticia.titulo}}</h5>
                         <p>{{noticia.detalles.length > 180 ? noticia.detalles.substring(0, 180) + "....." : noticia.detalles}}</p>
-                        <a href="" ng-click="noticiasCtrl.goToNoticia(noticia.noticia_id);">Ver</a>
+                        <!--a href="" ng-click="noticiasCtrl.goToNoticia(noticia.noticia_id);">Ver</a-->
+                        <button ng-click="noticiasCtrl.goToNoticia(noticia.noticia_id);" class="btn btn-default">Ver Noticia</button>
                     </div>
                 </div>
             </div>
@@ -41,7 +43,7 @@
                     <div class="noticia-info">
                         <h5>{{noticia.titulo}}</h5>
                         <p>{{noticia.detalles.length > 250 ? noticia.detalles.substring(0, 250) + "....." : noticia.detalles}}</p>
-                        <a href="" ng-click="noticiasCtrl.goToNoticia(noticia.noticia_id);">Ver</a>
+                        <button ng-click="noticiasCtrl.goToNoticia(noticia.noticia_id);" class="btn btn-default">Ver Noticia</button>
                     </div>
                 </div>
             </div>
@@ -55,7 +57,7 @@
                     <div class="noticia-info">
                         <h5>{{noticia.titulo}}</h5>
                         <p>{{noticia.detalles.length > 250 ? noticia.detalles.substring(0, 250) + "....." : noticia.detalles}}</p>
-                        <a href="" ng-click="noticiasCtrl.goToNoticia(noticia.noticia_id);">Ver</a>
+                        <button ng-click="noticiasCtrl.goToNoticia(noticia.noticia_id);" class="btn btn-default">Ver Noticia</button>
                     </div>
                 </div>
             </div>
@@ -69,7 +71,7 @@
                     <div class="noticia-info">
                         <h5>{{noticia.titulo}}</h5>
                         <p>{{noticia.detalles.length > 250 ? noticia.detalles.substring(0, 250) + "....." : noticia.detalles}}</p>
-                        <a href="" ng-click="noticiasCtrl.goToNoticia(noticia.noticia_id);">Ver</a>
+                        <button ng-click="noticiasCtrl.goToNoticia(noticia.noticia_id);" class="btn btn-default">Ver Noticia</button>
                     </div>
                 </div>
             </div>
